[workspace]
resolver = "3"
members = ["exporter", "config"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
# A combination of several not-yet-reviewed PRs fixing panics and other issues in cgroups-rs
cgroups-rs = { git = "https://github.com/oguzbilgener/cgroups-rs", rev = "bfb0ef7a4a88964ca06f04f517f3245395bc3912" }
# serde_prom = { path ="../serde_prom" }


[workspace.dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
schemars = "=1.0.0-alpha.17"
tokio = { version = "1.43.0" }
